--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "homepage": ".",
   "scripts": {
     "start": "node server.js",
-    "build": "react-scripts build", 
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
