--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tutoringapp",
   "version": "1.0.0",
+    "engines": {
+    "node": "20.x"
+    },
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
